# zshot

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
.omo/run-continuation/: ses_14f79ca93ffe7nHmHICAOUc5ca.json  ses_14f7e5677ffeCAaV1FEzLeRg7w.json
data/: graphics.qrc  zshot.rc
src/: CMakeLists.txt  main.cpp  windows-cli.cpp
src/config/: CMakeLists.txt  configresolver.cpp  generalconf.cpp
src/core/: CMakeLists.txt  capturerequest.cpp  globalshortcutfilter.cpp  signaldaemon.cpp  signaldaemon.h  zshot.cpp  zshot.h  zshotdaemon.cpp  zshotdaemon.h  zshotdbusadapter.cpp  zshotdbusadapter.h
src/tools/: CMakeLists.txt  capturetool.h  toolfactory.cpp
src/tools/circle/: circletool.cpp
src/tools/move/: movetool.cpp
src/tools/pin/: pinwidget.cpp
src/tools/rectangle/: rectangletool.cpp
src/tools/sizedecrease/: sizedecreasetool.cpp  sizedecreasetool.h
src/tools/sizeincrease/: sizeincreasetool.cpp  sizeincreasetool.h
src/tools/undo/: undotool.cpp
src/utils/: CMakeLists.txt  abstractlogger.cpp  confighandler.cpp  confighandler.h  globalvalues.cpp  history.cpp  pathinfo.cpp  screengrabber.cpp  screenshotsaver.cpp  systemnotification.cpp  valuehandler.cpp  valuehandler.h  waylandutils.cpp
src/widgets/: CMakeLists.txt  trayicon.cpp  trayicon.h
src/widgets/capture/: CMakeLists.txt  capturebutton.cpp  capturetoolbutton.cpp  capturewidget.cpp  capturewidget.h
src/widgets/panel/: CMakeLists.txt  sidepanelwidget.cpp  sidepanelwidget.h
